--- a/src/css/index.css
+++ b/src/css/index.css
@@ -107,37 +107,9 @@ body {
     padding-bottom: 10rem;
 }
 
-.imagen-1 {
-    width: 100%;
-    height: 400px;
-    border: 1px solid #eee;
-    border-radius: 10px;
-}
-
-.imagen-2 {
-    width: 100%;
-    height: 400px;
-    border: 1px solid #eee;
-    border-radius: 10px;
-}
-
-.dancer {
-    width: 100%;
-    height: 400px;
-    border: 1px solid #eee;
-    border-radius: 10px;
-}
-
-.group {
-    width: 100%;
-    height: 400px;
-    border: 1px solid #eee;
-    border-radius: 10px;
-}
-
 .photo-1 {
     width: 100%;
-    height: 450px;
+    height: auto;
     border: 1px solid #eee;
     border-radius: 10px;
 }
@@ -208,6 +180,12 @@ body {
 }
 
 /*MEDIA QUERIES*/
+
+@media (max-width: 520px) {
+    .showcase {
+        height: 70vh !important;
+    }
+}
 
 @media (max-width: 768px) {
 
